--- a/progetto1_museo/pom.xml
+++ b/progetto1_museo/pom.xml
@@ -88,6 +88,13 @@
 	    <version>2.5.1</version>
 	</dependency>
 	
+		<!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+	<dependency>
+	    <groupId>org.projectlombok</groupId>
+	    <artifactId>lombok</artifactId>
+	    <version>1.16.16</version>
+	    <scope>provided</scope>
+	</dependency>
 	
   </dependencies>
 
