--- a/progetto-museo/src/main/resources/application.properties
+++ b/progetto-museo/src/main/resources/application.properties
@@ -26,11 +26,11 @@ spring.datasource.hikari.idleTimeout=600000
 spring.datasource.hikari.maxLifetime=1800000
 spring.jpa.show-sql=true
 # VVV RICREA IL DB
-spring.jpa.hibernate.ddl-auto=create
+# spring.jpa.hibernate.ddl-auto=create
 # DA IMPOSTARE SUCCESSIVAMENTE AL POSTO DI QUELLA SOPRA!!!
 #spring.jpa.hibernate.ddl-auto=none
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost/progetto1_museo
+spring.datasource.url=jdbc:postgresql://localhost/museo
 spring.datasource.username=postgres
 spring.datasource.password=ggwp
 #v
