--- a/progetto-museo/src/main/resources/messages/message.properties
+++ b/progetto-museo/src/main/resources/messages/message.properties
@@ -1,22 +1,23 @@
-museum.name = Uffizi Museum
+museum.name = Museo degli Uffizi
 
-index.explore = Explore
-index.curatore.login = Login Administrators
-index.window.title = Home - Uffizi Museum
+index.explore = Esplora
+index.curatore.login = Login Curatori
+index.window.title = Home - Museo degli Uffizi
 
 footer.home = Home
-footer.changeLanguage.hint = Change the Language
-footer.changeLanguage.english = English
-footer.changeLanguage.italian = Italian
+footer.changeLanguage.hint = Cambia la Lingua
+footer.changeLanguage.english = Inglese
+footer.changeLanguage.italian = Italiano
 
-error.generic.title = An error has occurred, we apologize for the inconvenient.
+error.generic.title = C'è stato un errore, ci scusiamo per il disagio.
 
-login.curatori.username = Username
+login.curatori.username = Nome Utente
 login.curatori.password = Password
-login.curatori.hint.username = Digit your username...
-login.curatori.hint.password = Digit your password...
-login.curatori.entra = Enter
+login.curatori.hint.username = Digita il nome utente...
+login.curatori.hint.password = Digita la password...
+login.curatori.entra = Entra
 
-page.title.index = Home - Uffizi Museum
-page.title.loginCuratori = Login - Uffizi Museum
-page.title.explore = Explore - Uffizi Museum
+page.title.index = Home - Museo degli Uffizi
+page.title.loginCuratori = Login - Museo degli Uffizi
+page.title.explore = Esplora - Museo degli Uffizi
+page.title.error = Errore - Museo degli Uffizi
