Aggiunto Registrazione User/Account + Login + Logout
2fix: cliccare sulla selezione della sezione "Esplora" porta alla sezione "Login"

--- a/progetto-museo/src/main/resources/messages/message.properties
+++ b/progetto-museo/src/main/resources/messages/message.properties
@@ -1,7 +1,8 @@
 museum.name = Museo degli Uffizi
 
 index.explore = Esplora
-index.curatore.login = Login Curatori
+index.login = Accedi
+index.registration = Registrati
 index.window.title = Home - Museo degli Uffizi
 
 footer.home = Home
@@ -11,13 +12,45 @@ footer.changeLanguage.italian = Italiano
 
 error.generic.title = C'è stato un errore, ci scusiamo per il disagio.
 
+author = Davide Cecchetti - 506418
+
 login.curatori.username = Nome Utente
 login.curatori.password = Password
 login.curatori.hint.username = Digita il nome utente...
 login.curatori.hint.password = Digita la password...
 login.curatori.entra = Entra
 
+registration.confirm = Conferma
+registration.name = Nome
+registration.surname = Cognome
+registration.username = Username
+registration.password = Password
+registration.hint.name = Digita il tuo nome...
+registration.hint.surname = Digita il tuo cognome...
+registration.hint.username = Digita il tuo username...
+registration.hint.password = Digita la tua password...
+
+admin.adminHome.title = Area Riservata agli Amministratori
+admin.adminHome.addOpera = Aggiungi un'Opera
+admin.adminHome.removeOpera = Rimuovi un'Opera
+admin.adminHome.addCollezione = Aggiungi una Collezione
+admin.adminHome.removeCollezione = Riumuovi una Collezione
+admin.adminHome.addArtista = Aggiungi un'Artista
+admin.adminHome.removeArtista = Riumuovi un'Artista
+admin.adminHome.logout = Esci
+
+default.defaultHome.title = Area Riservata Utenti
+default.defaultHome.logout = Esci
+
 page.title.index = Home - Museo degli Uffizi
-page.title.loginCuratori = Login - Museo degli Uffizi
+page.title.loginForm = Login - Museo degli Uffizi
 page.title.explore = Esplora - Museo degli Uffizi
 page.title.error = Errore - Museo degli Uffizi
+page.title.registrationForm = Registrazione - Museo degli Uffizi
+page.title.registrationSuccessfull = Registrazione Avvenuta con Successo - Museo degli Uffizi
+page.adminHome.title = Area Riservata Amministratori - Museo degli Uffizi
+page.defaultHome.title = Area Riservata Utenti - Museo degli Uffizi
+
+explore.title = Esplora - Museo degli Uffizi
+
+registration.successful.message = La registrazione è avvenuta con successo!
