--- a/progetto-museo/src/main/resources/application.properties
+++ b/progetto-museo/src/main/resources/application.properties
@@ -25,8 +25,8 @@ spring.datasource.hikari.idleTimeout=600000
 #v
 spring.datasource.hikari.maxLifetime=1800000
 spring.jpa.show-sql=true
-# VVV RICREA IL DB
-spring.jpa.hibernate.ddl-auto=create
+# VVV RICREA IL DB con 'create', alla fine del dev mettici 'none'
+spring.jpa.hibernate.ddl-auto=none
 # DA IMPOSTARE SUCCESSIVAMENTE AL POSTO DI QUELLA SOPRA!!!
 #spring.jpa.hibernate.ddl-auto=none
 spring.datasource.driver-class-name=org.postgresql.Driver
