Added Many Things
+ addOpera
+ addCollezione
+ cambio di lingua con local resolver + interceptor
- fixati molti bug

--- a/progetto-museo/src/main/resources/messages/message.properties
+++ b/progetto-museo/src/main/resources/messages/message.properties
@@ -1,11 +1,12 @@
 museum.name = Museo degli Uffizi
 
 index.explore = Esplora
-index.login = Accedi
+index.login = Area Riservata
 index.registration = Registrati
 index.window.title = Home - Museo degli Uffizi
 
 footer.home = Home
+footer.back = Indietro
 footer.changeLanguage.hint = Cambia la Lingua
 footer.changeLanguage.english = Inglese
 footer.changeLanguage.italian = Italiano
@@ -50,7 +51,36 @@ page.title.registrationForm = Registrazione - Museo degli Uffizi
 page.title.registrationSuccessfull = Registrazione Avvenuta con Successo - Museo degli Uffizi
 page.adminHome.title = Area Riservata Amministratori - Museo degli Uffizi
 page.defaultHome.title = Area Riservata Utenti - Museo degli Uffizi
+page.title.successfulOperation = Successo - Museo degli Uffizi
+page.title.addOpera = Aggiungi un'Opera - Museo degli Uffizi
+page.title.addCollezione = Aggiungi una Collezione - Museo degli Uffizi
 
 explore.title = Esplora - Museo degli Uffizi
+
+addOpera.formTitle = Aggiungi un'Opera d'Arte
+addOpera.titolo = *Titolo
+addOpera.annoRealizzazione = *Anno di Realizzazione
+addOpera.descrizione = Descrizione
+addOpera.link = *URL Immagine
+addOpera.collezione = Collezione di Appartenenza
+addOpera.artista = *Artista
+addOpera.hint.titolo = Digita il Titolo...
+addOpera.hint.annoRealizzazione = Digita l'Anno di Realizzazione...
+addOpera.hint.descrizione = Scrivi una Descrizione (facoltativo)
+addOpera.hint.link = Inserisci l'URL Immagine...
+addOpera.hint.collezione = Digita l'Identificativo della Collezione di Appartenenza... (facoltativo)
+addOpera.hint.artista = Digita l'Identificativo dell'Artista...
+
+addCollezione.formTitle = Aggiungi una Collezione
+addCollezione.nome = *Nome
+addCollezione.descrizione = Descrizione
+addCollezione.curatore = *Curatore
+addCollezione.primaOpera = *Prima Opera
+addCollezione.hint.nome = Digita il Nome...
+addCollezione.hint.descrizione = Scrivi una Descrizione... (optional)
+addCollezione.hint.curatore = Digita l'Identificativo del Curatore...
+addCollezione.primaOpera = Digita l'Identificativo della Prima Opera...
+
+successfulOperation.message = L'operazione è avvenuta con successo!
 
 registration.successful.message = La registrazione è avvenuta con successo!
