Aggiunte tutte le funzioni dell'Admin
Ora mancano solo i "filtri" in explorer e eventuali bugfix

PS: a quanto pare mancano delle stringhe nei message inglesi!

--- a/progetto-museo/src/main/resources/application.properties
+++ b/progetto-museo/src/main/resources/application.properties
@@ -62,3 +62,16 @@ spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.Sec
 spring.security.user.name=admin
 spring.security.user.password=ggwp
 
+#=========================================================
+# = Jackson Serialization (dates from form2springboot2SQL)
+#=========================================================
+spring.jackson.serialization.write-dates-as-timestamps: false
+spring.mvc.format.date=yyyy-MM-dd
+spring.mvc.format.date-time=yyyy-MM-dd HH:mm:ss
+spring.mvc.format.time=HH:mm:ss
+
+
+
+
+
+
