--- a/progetto-museo/src/main/resources/messages/message.properties
+++ b/progetto-museo/src/main/resources/messages/message.properties
@@ -31,11 +31,22 @@ registration.hint.surname = Digita il tuo cognome...
 registration.hint.username = Digita il tuo username...
 registration.hint.password = Digita la tua password...
 
+removeOpera.formTitle = Rimuovi un'Opera
+removeOpera.id = *Id
+removeOpera.hint.id = Digita l'Identificativo dell'Opera...
+
+removeCollezione.formTitle = Rimuovi una Collezione
+removeCollezione.id = *Id
+removeCollezione.hint.id = Digita l'Identificativo della Collezione...
+
+elimination.confirm = Rimuovi
+
 admin.adminHome.title = Area Riservata agli Amministratori
 admin.adminHome.addOpera = Aggiungi un'Opera
 admin.adminHome.removeOpera = Rimuovi un'Opera
 admin.adminHome.addCollezione = Aggiungi una Collezione
-admin.adminHome.removeCollezione = Riumuovi una Collezione
+admin.adminHome.addToCollezione = Aggiungi un'Opera ad una Collezione
+admin.adminHome.removeCollezione = Rimuovi una Collezione
 admin.adminHome.addArtista = Aggiungi un'Artista
 admin.adminHome.removeArtista = Riumuovi un'Artista
 admin.adminHome.logout = Esci
@@ -54,6 +65,10 @@ page.defaultHome.title = Area Riservata Utenti - Museo degli Uffizi
 page.title.successfulOperation = Successo - Museo degli Uffizi
 page.title.addOpera = Aggiungi un'Opera - Museo degli Uffizi
 page.title.addCollezione = Aggiungi una Collezione - Museo degli Uffizi
+page.title.addToCollezione = Aggiungi un'Opera ad una Collezione - Museo degli Uffizi
+page.title.addArtista = Aggiungi un'Artista - Museo degli Uffizi
+page.title.removeOpera = Rimuovi un'Opera - Museo degli Uffizi
+page.title.removeCollezione = Rimuovi una Collezione - Museo degli Uffizi
 
 explore.title = Esplora - Museo degli Uffizi
 
@@ -79,8 +94,33 @@ addCollezione.primaOpera = *Prima Opera
 addCollezione.hint.nome = Digita il Nome...
 addCollezione.hint.descrizione = Scrivi una Descrizione... (optional)
 addCollezione.hint.curatore = Digita l'Identificativo del Curatore...
-addCollezione.primaOpera = Digita l'Identificativo della Prima Opera...
+addCollezione.hint.primaOpera = Digita l'Identificativo della Prima Opera...
 
-successfulOperation.message = L'operazione è avvenuta con successo!
+addToCollezione.formTitle = Aggiungi un'Opera ad una Collezione
+addToCollezione.idCollezione = *Id della Collezione
+addToCollezione.idOpera = *Id dell'Opera
+addToCollezione.hint.idCollezione = Digita l'Identificativo della Collezione...
+addToCollezione.hint.idOpera = Digita l'Identificativo dell'Opera da aggiungere alla Collezione...
+
+addArtista.formTitle = Aggiungi un'Artista
+addArtista.nomeArtistico = Nome Artistico
+addArtista.nome = *Nome
+addArtista.cognome = *Cognome
+addArtista.dataNascita = *DataNascita
+addArtista.luogoNascita = *LuogoNascita
+addArtista.dataMorte = Data Morte
+addArtista.luogoMorte = Luogo Morte
+addArtista.nazionalita= *Nazionalita'
+addArtista.hint.nomeArtistico = Digita il Nome Artistico... (optional)
+addArtista.hint.nome = Digita il Nome...
+addArtista.hint.cognome = Digita il Cognome...
+addArtista.hint.dataNascita = Seleziona la Data di Nascita...
+addArtista.hint.luogoNascita = Digita il Luogo di Nascita...
+addArtista.hint.dataMorte = Seleziona la Data di Morte... (optional)
+addArtista.hint.luogoMorte = Digita il Luogo di Morte... (optional)
+addArtista.hint.nazionalita= Digita la Nazionalita'...
+
+successfulOperation.message = L'operazione e' avvenuta con successo!
+successfulOperation.backToPrivateArea = Torna nell'Area Privata
 
 registration.successful.message = La registrazione è avvenuta con successo!
