--- a/progetto-museo/pom.xml
+++ b/progetto-museo/pom.xml
@@ -62,11 +62,12 @@
 			<scope>test</scope>
 		</dependency>
 		
+		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.datatype/jackson-datatype-joda -->
+		<!-- per passaggio da date nel form a LocalDate in SpringBoot e Date su SQL -->
 		<dependency>
-			<groupId>org.projectlombok</groupId>
-			<artifactId>lombok</artifactId>
-			<version>1.18.16</version>
-			<scope>provided</scope>
+		    <groupId>com.fasterxml.jackson.datatype</groupId>
+		    <artifactId>jackson-datatype-joda</artifactId>
+		    <version>2.12.3</version>
 		</dependency>
 		
 	</dependencies>
