--- a/progetto-museo/src/main/resources/messages/message.properties
+++ b/progetto-museo/src/main/resources/messages/message.properties
@@ -69,8 +69,12 @@ page.title.addToCollezione = Aggiungi un'Opera ad una Collezione - Museo degli U
 page.title.addArtista = Aggiungi un'Artista - Museo degli Uffizi
 page.title.removeOpera = Rimuovi un'Opera - Museo degli Uffizi
 page.title.removeCollezione = Rimuovi una Collezione - Museo degli Uffizi
+page.title.explore.byArtista = Esplora per Artista - Museo degli Uffizi
+page.title.explore.byAnnoDiRealizzazione = Esplora per Data - Museo degli Uffizi
 
 explore.title = Esplora - Museo degli Uffizi
+explore.goToExploreByArtista = Ordina per Artista
+explore.goToExploreByAnnoDiRealizzazione = Ordina per Anno di Realizzazione
 
 addOpera.formTitle = Aggiungi un'Opera d'Arte
 addOpera.titolo = *Titolo
