--- a/progetto-museo/src/main/resources/messages/message.properties
+++ b/progetto-museo/src/main/resources/messages/message.properties
@@ -11,7 +11,7 @@ footer.changeLanguage.hint = Cambia la Lingua
 footer.changeLanguage.english = Inglese
 footer.changeLanguage.italian = Italiano
 
-error.generic.title = C'è stato un errore, ci scusiamo per il disagio.
+error.generic.title = C'e' stato un errore, ci scusiamo per il disagio.
 
 author = Davide Cecchetti - 506418
 
@@ -26,10 +26,12 @@ registration.name = Nome
 registration.surname = Cognome
 registration.username = Username
 registration.password = Password
+registration.password.confirm = Conferma Password
 registration.hint.name = Digita il tuo nome...
 registration.hint.surname = Digita il tuo cognome...
 registration.hint.username = Digita il tuo username...
 registration.hint.password = Digita la tua password...
+registration.hint.password.confirm = Conferma la tua password...
 
 removeOpera.formTitle = Rimuovi un'Opera
 removeOpera.id = *Id
@@ -127,4 +129,4 @@ addArtista.hint.nazionalita= Digita la Nazionalita'...
 successfulOperation.message = L'operazione e' avvenuta con successo!
 successfulOperation.backToPrivateArea = Torna nell'Area Privata
 
-registration.successful.message = La registrazione è avvenuta con successo!
+registration.successful.message = La registrazione e' avvenuta con successo!
